versions/v4.4.80/MANIFEST.md
# Manifest v4.4.80

Date: 2026-06-05

## Changed Files

- `xc/ws63_team_network/src/ws63_team_network_app.c`
- `automation/ws63/tests/test_ws63_four_board_relay_test.py`
- `automation/ws63/tools/ws63_remote_build_v4.py`
- `automation/ws63/tools/ws63_auto_burn.py`
- `automation/ws63/tests/test_ws63_auto_burn.py`
- `scripts/ws63_flash_multi.ps1`
- `README.md`
- `versions/README.md`
- `versions/v4.4.80/AUTO_FLASH_AND_FOUR_BOARD_TEST.md`
- `meta/PROJECT_OPERATION_SOP.md`

## Verification Plan

```powershell
git diff --check
.\.tooling\py311\python.exe -m py_compile automation\ws63\tools\ws63_four_board_relay_test.py automation\ws63\tools\ws63_remote_build_v4.py automation\ws63\tools\ws63_auto_burn.py
.\.tooling\py311\python.exe -c "import sys, unittest; sys.path.insert(0, r'E:\codex_documents\sle'); suite=unittest.defaultTestLoader.loadTestsFromNames(['automation.ws63.tests.test_ws63_four_board_relay_test','automation.ws63.tests.test_ws63_auto_burn']); result=unittest.TextTestRunner(verbosity=2).run(suite); raise SystemExit(0 if result.wasSuccessful() else 1)"
```

Result:

```text
git diff --check: PASS
py_compile: PASS
unit tests: PASS, 16 tests
```

Remote build:

```powershell
$env:UBUNTU_HOST='192.168.6.5'
$env:UBUNTU_USER='owen'
$env:UBUNTU_PASS='<local only>'
$env:UBUNTU_SDK='/home/owen/workspace/bearpi-pico_h3863'
.\.tooling\py311\python.exe .\automation\ws63\tools\ws63_remote_build_v4.py
```

Result:

```text
remote build: PASS
package: output_from_vm\team_network_v4_unified_runtime_role\ws63-liteos-app_v4_unified_all.fwpkg
package size: 1601000
contains v4.4.80: true
post-build guard: PASS
```

## Required Runtime Proof

Runtime proof is still required before calling the full four-board objective
complete:

```text
COM16 leader, COM13/COM17/COM18 members
direct cap = 1
initial topology: active=3 direct=1 relayed=2 stale=0 unreachable=0 plan=0 converged=1
non-relay member reboot/rejoin: PASS
relay reboot failover: child relay elected
original relay return: documented as either original relay regains relay role or returns as member
no repeated route hint/config NO_ROUTE caused by next_hop=leader/self direct routes
```

## Flash Policy

Do not flash automatically for this code-only correction unless the user asks
to burn the new package. Use the documented wrapper when that happens:

```powershell
powershell -NoProfile -ExecutionPolicy Bypass -File .\scripts\ws63_flash_multi.ps1 `
  -Ports COM16,COM13,COM17,COM18 `
  -ExpectedVersion v4.4.80 `
  -Parallel `
  -ParallelStartDelayMs 1200 `
  -WaitTimeout 45 `
  -ManualRetryTimeout 0
```
